refactor to add feature flag for s3 export approach